--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
     # Profile information
     name: eirini krouki
     tagline: 
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar:  
 
     # Sidebar links
     email: c18krou@ionio.gr
